Tela da home quase pronto
Tela da home com todas as informações, mas com um css xulo

--- a/home.html
+++ b/home.html
@@ -9,30 +9,37 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body>
+<body background="src/fundo.png">
     <!-- TOPO -->
-    <hr>
     <div>
-        <img src="src/logo.png" alt="LOGO" class="espaco-direita">
-
+        <img src="src/logo.png" alt="logo">
         <a href="">HOME</a>|
         <a href="quemSomos.html">Quem-Somos</a>|
         <a href="contato.html">Contato</a>
+
     </div>
 
     <!-- CORPO -->
     <div>
-        <img src="src/capa.png" alt="" sty>
+        <img src="src/capa.png" alt="capa unes">
     </div>
 
     <!-- TEXTO -->
     <div>
+        <h2>Sobre a universidade</h2>
 
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, commodi! Nemo a sed recusandae,
+            repudiandae enim laborum blanditiis, ipsa velit, sunt aspernatur voluptas doloribus quae distinctio magni
+            error exercitationem quia. </p>
+
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias optio dolorem rerum atque, impedit quasi
+            temporibus numquam rem veniam et tenetur eveniet officia ullam deleniti eaque, alias necessitatibus,
+            accusamus fugiat.</p>
     </div>
 
     <!-- RODAPÉ -->
     <div>
-
+        <p>Todos os direitos reservados</p>
     </div>
 </body>
 
