Site feito sem o css
As paginas do site feitas, mas sem a estilização

--- a/contato.html
+++ b/contato.html
@@ -11,12 +11,39 @@
 
 <body>
     <!-- TOPO -->
-    <img src="src/logo.png" alt="LOGO" class="espaco-direita">
+    <div>
+        <img src="src/logo.png" alt="LOGO">
+        <a href="">HOME</a>|
+        <a href="quemSomos.html">Quem-Somos</a>|
+        <a href="contato.html">Contato</a>
 
-    <a href="">HOME</a>|
-    <a href="quemSomos.html">Quem-Somos</a>|
-    <a href="contato.html">Contato</a>
     </div>
+
+    <!--CONTATOS-->
+    <div>
+        <h1>Entre contato</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+
+    <hr>
+
+    <!--EMAIL-->
+    <div>
+        <form>
+            Seu Email: <br>
+            <input type="text" name="Email"><br>
+            Assunto: <br>
+            <input type="text" name="Assunto"><br>
+            Descrição: <br>
+            <input type="text" name="Descrição"><br>
+        </form>
+    </div>
+
+    <!--RODAPÉ-->
+    <div>
+        <p>Todos os direitos reservados</p>
+    </div>
+
 </body>
 
 </html>
