--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body background="src/fundo.png">
     <!-- TOPO -->
     <div>
-        <img src="src/logo.png" alt="logo">
+        <img src="src/logo.png" alt="LOGO">
         <a href="">HOME</a>|
         <a href="quemSomos.html">Quem-Somos</a>|
         <a href="contato.html">Contato</a>
