--- a/quemSomos.html
+++ b/quemSomos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,48 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <!-- TOPO -->
-    <img src="src/logo.png" alt="LOGO" class="espaco-direita">
+    <div>
+        <img src="src/logo.png" alt="LOGO">
+        <a href="">HOME</a>|
+        <a href="quemSomos.html">Quem-Somos</a>|
+        <a href="contato.html">Contato</a>
 
-    <a href="">HOME</a>|
-    <a href="quemSomos.html">Quem-Somos</a>|
-    <a href="contato.html">Contato</a>
     </div>
 
+    <!--APRESENTAÇÃO-->
+    <div>
+        <h1>QUEM SOMOS</h1>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat facilis recusandae rem ea. Aspernatur
+            dignissimos unde, eaque laborum quas consectetur natus beatae reprehenderit, vel reiciendis asperiores
+            illum! Sunt, ex? Est!</P>
+
+        <h1>5 Motivos para estudar</h1>
+        <ol>
+            <li>Material sempre atualizado</li>
+            <li>Tablets em sala de aula</li>
+            <li>Professores renomados</li>
+            <li>Universidade bem renomada</li>
+            <li>Ótima localização</li>
+        </ol>
+    </div>
+
+    <hr>
+
+    <!--OBJETIVOS-->
+    <div>
+        <h1>Objetivos</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit debitis amet quasi consequatur
+            eligendi dicta eos, aut aspernatur fugit, enim commodi incidunt inventore sapiente odio rem quia architecto
+            quibusdam suscipit.</p>
+    </div>
+
+    <!--RODAPÉ-->
+    <div>
+        <p>Todos os direitos reservados</p>
+    </div>
 </body>
+
 </html>
