Desafio pronto (entre aspas)
Desafio pronto sem ta responsivo

--- a/home.html
+++ b/home.html
@@ -10,12 +10,16 @@
 </head>
 
 <body background="src/fundo.png">
+    
     <!-- TOPO -->
-    <div>
+    <div class="espaco">
         <img src="src/logo.png" alt="LOGO">
-        <a href="">HOME</a>|
-        <a href="quemSomos.html">Quem-Somos</a>|
-        <a href="contato.html">Contato</a>
+
+        <span>
+            <a href="">HOME</a>|
+            <a href="quemSomos.html">Quem-Somos</a>|
+            <a href="contato.html">Contato</a>
+        </span>
 
     </div>
 
@@ -30,16 +34,20 @@
 
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, commodi! Nemo a sed recusandae,
             repudiandae enim laborum blanditiis, ipsa velit, sunt aspernatur voluptas doloribus quae distinctio magni
-            error exercitationem quia. </p>
+            error exercitationem quia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, omnis sunt et
+            culpa sequi placeat? Pariatur explicabo sunt asperiores consectetur quibusdam dolore, veritatis ipsa. Culpa
+            optio ipsam deleniti voluptas sed! </p>
 
         <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias optio dolorem rerum atque, impedit quasi
             temporibus numquam rem veniam et tenetur eveniet officia ullam deleniti eaque, alias necessitatibus,
-            accusamus fugiat.</p>
+            accusamus fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit non, architecto
+            reiciendis expedita ipsa aperiam cupiditate hic vero eaque libero voluptatibus repudiandae voluptate.
+            Explicabo magnam officia harum, saepe accusantium suscipit!</p>
     </div>
 
     <!-- RODAPÉ -->
-    <div>
-        <p>Todos os direitos reservados</p>
+    <div class="centralizar">
+        <b>Todos os direitos reservados</b>
     </div>
 </body>
 
