--- a/quemSomos.html
+++ b/quemSomos.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body>
+<body background="src/fundo2.png">
     <!-- TOPO -->
-    <div>
+    <div class="espaco">
         <img src="src/logo.png" alt="LOGO">
-        <a href="">HOME</a>|
-        <a href="quemSomos.html">Quem-Somos</a>|
-        <a href="contato.html">Contato</a>
+
+        <span>
+            <a href="home.html">HOME</a>|
+            <a href="">Quem-Somos</a>|
+            <a href="contato.html">Contato</a>
+        </span>
 
     </div>
 
@@ -47,8 +50,8 @@
     </div>
 
     <!--RODAPÉ-->
-    <div>
-        <p>Todos os direitos reservados</p>
+    <div class="centralizar">
+        <b>Todos os direitos reservados</b>
     </div>
 </body>
 
