Desafio 1 de DW completo

--- a/contato.html
+++ b/contato.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contato</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body background="src/fundo2.png">
+<body id="fundo">
     <!-- TOPO -->
     <div class="espaco">
         <img src="src/logo.png" alt="LOGO">
 
-        <span>
+        <div class="link">
             <a href="home.html">HOME</a>|
             <a href="quemSomos.html">Quem-Somos</a>|
-            <a href="">Contato</a>
-        </span>
+            <a href="contato.html">Contato</a>
+        </div>
+
 
     </div>
 
