--- a/home.html
+++ b/home.html
@@ -5,32 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME UNES</title>
+    <title>Home</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-<body background="src/fundo.png">
-    
+<body>
+
     <!-- TOPO -->
     <div class="espaco">
         <img src="src/logo.png" alt="LOGO">
 
-        <span>
+        <div class="link">
             <a href="">HOME</a>|
             <a href="quemSomos.html">Quem-Somos</a>|
             <a href="contato.html">Contato</a>
-        </span>
+        </div>
 
     </div>
 
     <!-- CORPO -->
-    <div>
-        <img src="src/capa.png" alt="capa unes">
+    <div id="capa">
+        <img src="src/capa.png" alt="capa">
     </div>
 
     <!-- TEXTO -->
     <div>
-        <h2>Sobre a universidade</h2>
+        <h1>Sobre a universidade</h1>
 
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, commodi! Nemo a sed recusandae,
             repudiandae enim laborum blanditiis, ipsa velit, sunt aspernatur voluptas doloribus quae distinctio magni
